--- a/src/index.html
+++ b/src/index.html
@@ -59,45 +59,14 @@
                             <label for="phone">Phone Number: </label>
                             <input type="text" class="form-control" id="phone" ng-model="phone">
                         </div>
+                        <div class="form-group">
+                            <label for="phone">Near expire date? </label>
+                            <input type="checkbox" class="form-control" id="closeexpire" ng-model="closeToExpire">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer text-center">
                     <a class="btn btn-default" ng-click="doSearch();">Submit</a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div id="detailsModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Detail modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">{{feature.Title}}</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6 text-center">
-                            <img class="img-thumbnail" ng-src="{{(feature.Poster == 'N/A') ? 'img/placeholder.png' : feature.Poster}}" alt="movie poster">
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <h4 class="">Plot</h4>
-                            <p>{{feature.Plot}}</p>
-                            <h4 class="">Rating(<small>Rotten Tomatoes</small>)</h4>
-                            <span ng-show="feature.rating == null">Not Available</span>
-                            <div class="progress text-center" ng-show="feature.rating != null">
-                                <div class="progress-bar progress-bar-{{feature.ratingClass}}" role="progressbar" aria-valuenow="{{feature.rating}}" aria-valuemin="0" aria-valuemax="100" style="width: {{feature.rating}}%">
-                                    <span>{{feature.rating}}</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
 
@@ -133,6 +102,7 @@
                             <li><a href="#" ng-click="sort = 'firstname'">First Name</a></li>
                             <li><a href="#" ng-click="sort = 'lastname'">Last Name</a></li>
                             <li><a href="#" ng-click="sort = 'phone'">Phone</a></li>
+                            
 
                         </ul>
                     </li>
@@ -157,7 +127,7 @@
                     <th>Last Name</th>
                     <th>Phone #</th>
                     <th>Address</th>
-                    <th>Mailing Addr.</th>
+                    <th>Mailing Address</th>
                     <th>Email</th>
                     <th>Membership</th>
                     <th>Expiry Date</th>
