--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" href="img/lookup.png">
-    <title>Open Movie Database Search</title>
+    <title>Client Database Search</title>
 
     <!-- build:css css/main.css -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
